[package]
name = "quicksilver-web"
version = "0.1.0"
authors = ["RichoDemus <git@richodemus.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quicksilver = "0.4.0"
#quicksilver = "0.4-alpha0"
#quicksilver = { git = "https://github.com/ryanisaacg/quicksilver" }
