[package]
name = "webpong"
version = "0.1.0"
authors = ["RichoDemus <git@richodemus.com>"]
edition = "2018"

[dependencies]
futures = { version = "*", default-features = false }
#tungstenite = "0.13.0"
send_wrapper = "0.5.0"
futures-util = "0.3.13"
nalgebra = "0.25.1"
ncollide2d = "0.28.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
quicksilver = "0.4.0"
tokio = { version = "1.2.0", features = ["full"] }
warp = "0.3"
url = "2.2.1"
futures-util = "*" #todo try to lock
tungstenite = "0.13.0"
tokio-tungstenite = "*"
log = "0.4.14"

#futures = "*"

futures-channel = "*"

[target.'cfg(target_arch = "wasm32")'.dependencies]
quicksilver = {version = "0.4.0", features = ["web-sys"] }
console_error_panic_hook = "0.1.6"
wasm-bindgen = "0.2.71"
js-sys = "0.3"
ws_stream_wasm = "0.7.0"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.22"
features = [
    "BinaryType",
    "Blob",
    "ErrorEvent",
    "FileReader",
    "MessageEvent",
    "ProgressEvent",
    "WebSocket",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.0"
web-sys = "0.3.48"
wasm-bindgen = "0.2.71"
wasm-bindgen-futures = "0.4.21"
env_logger = "0.8.3"
