[package]
name = "webpong"
version = "0.1.0"
authors = ["RichoDemus <git@richodemus.com>"]
edition = "2018"

[dependencies]
futures = { version = "0.3.13", default-features = false }
send_wrapper = "0.5.0"
futures-util = "0.3.13"
nalgebra = { version = "0.25.3", features = ["serde", "serde-serialize"] }
ncollide2d = "0.28.0"
serde_json = "1.0.64"
serde = "1.0.125"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
quicksilver = "0.4.0"
tokio = { version = "1.4.0", features = ["full"] }
warp = "0.3.1"
url = "2.2.1"
futures-util = "0.3.13"
tungstenite = "0.13.0"
tokio-tungstenite = { version = "0.14.0" }
tokio-native-tls = "0.3.0"
log = "0.4.14"
env_logger = "0.8.3"
cfg-if = "1.0.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
rand = "0.8.0"
retain_mut = "0.1.2"

futures-channel = "0.3.13"

[target.'cfg(target_arch = "wasm32")'.dependencies]
quicksilver = { version = "0.4.0", features = ["web-sys"] }
console_error_panic_hook = "0.1.6"
wasm-bindgen = "0.2.72"
js-sys = "0.3"
ws_stream_wasm = "0.7.0"
uuid = { version = "0.8", features = ["serde", "v4", "wasm-bindgen"] }

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.22"
features = [
    "BinaryType",
    "Blob",
    "ErrorEvent",
    "FileReader",
    "MessageEvent",
    "ProgressEvent",
    "WebSocket",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.22"
web-sys = "0.3.49"
wasm-bindgen = "0.2.71"
wasm-bindgen-futures = "0.4.22"

